Shang New Live/src/objects/Cash_Receipt__c.object
<CustomObject>
    <fields>
        <fullName>Cash_Receipt_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Receipt Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Matched_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Matched Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JV_Status__c</fullName>
        <description>Pending
Generated
Posted

JV - Journal Voucher</description>
        <label>JV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offset_Amount__c</fullName>
        <label>Offset Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Local__c</fullName>
        <label>Payment Amount (Local)</label>
        <summarizedField>Cash_Detail__c.Amount_Paid_Local_WF__c</summarizedField>
        <summaryForeignKey>Cash_Detail__c.Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Total_Paid__c +  Offset_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Paid + Offset Amount</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <label>Payment Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MMK</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>Kyat</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule.</description>
        <inlineHelpText>This field is populated by W/F rule</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <inlineHelpText>Roll-up of Amount Paid from related Cash Details</inlineHelpText>
        <label>Total Amount</label>
        <summarizedField>Cash_Detail__c.Amount_Paid__c</summarizedField>
        <summaryForeignKey>Cash_Detail__c.Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Void_Datetime__c</fullName>
        <label>Void Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Reason__c</fullName>
        <label>Void Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Receipt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Offset_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Void__c</columns>
        <columns>Remarks__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>JCThisMonthCashReceipts</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Offset_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Void__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>City</value>
        </filters>
        <label>JC This Month Cash Receipts</label>
    </listViews>
    <listViews>
        <fullName>JMTThisMonthCashReceipts</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Offset_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Void__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Maw Tin</value>
        </filters>
        <label>JMT This Month Cash Receipts</label>
    </listViews>
    <listViews>
        <fullName>ThisMonthCashReceipts</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Offset_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Void__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>This Month Cash Receipts</label>
    </listViews>
    <listViews>
        <fullName>TodayCashReceipts</fullName>
        <columns>NAME</columns>
        <columns>Tenant__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Offset_Amount__c</columns>
        <columns>Payment_Date__c</columns>
        <columns>Void__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payment_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today Cash Receipts</label>
    </listViews>
    <nameField>
        <label>Receipt Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Receipts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>